Bug #11 - Spacing under eyebrow copy
- Added 10px of spacing between bottom of eyebrow strip and top of headline

--- a/wp-content/themes/oph/ui/scss/main.scss
+++ b/wp-content/themes/oph/ui/scss/main.scss
@@ -3055,6 +3055,7 @@ button,
       }
     }
     > h4 {
+      margin-top: 28px;
       text-align: left;
     }
     > h5 {
